# beachops

./: .dockerignore  .env.example  .env.windows-worker.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.bind.yml  docker-compose.ops.yml  docker-compose.windows-worker.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy-prod.yml  docker-publish.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_user_agent_slots.py  003_user_cursor_model_key.py  (+15 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  KNOWLEDGE_BASE.md  OPERATIONS.md  OPS_MCP.md  README.md  SELF_DEPLOY.md  THREAT_MODEL.md  USER_GUIDE.md
scripts/: _tmp_sdk_check.py  beachops-agent-ssh.sh  bootstrap-prod-env.sh  deploy-to-prod.ps1  install-windows-worker.ps1  migrate_sqlite_to_postgres.py  prod-beachops-marketolog-http.nginx.conf  prod-beachops-marketolog.nginx.conf  prod-beachops-webapp-http.nginx.conf  prod-beachops-webapp.nginx.conf  prod-deploy.sh  reconcile-postgres-password.sh  run-windows-worker.ps1
tests/: test_agent_slot_naming.py  test_agent_slots_keyboard.py  test_agent_slots_rebind.py  test_alembic_migrations.py  test_beachops_control.py  test_cancel_service.py  test_cloud_only_and_mcp_helpers.py  test_cursor_agent_gone.py  test_cursor_agent_usage.py  test_cursor_models.py  test_cursor_sse.py  test_cursor_stream_recovery.py  test_cursor_tokens.py  test_deploy_trigger.py  test_forward_format.py  test_github_oauth.py  test_github_review.py  test_hot_cache.py  test_import_smoke.py  test_inline_keyboards.py  test_job_queue.py  test_logging_config.py  test_markdown_format.py  test_markdown_sanitize.py  test_mcp_server.py  test_observe_run_terminal.py  test_orchestration_helpers.py  test_passkey_auth.py  test_payload_crypto.py  test_plan_format.py  test_prompt_coalesce.py  test_prompts.py  test_queue_notice.py  test_redaction.py  test_repo_parse.py  test_repository_policy.py  test_retry_mode.py  test_risk_policy.py  test_run_activity.py  test_run_artifacts.py  (+20 more)
webapp/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
(+227 files in other folders)
