[project]
name = "tg-cursor-bot"
version = "0.1.0"
description = "Telegram bot interface to Cursor Cloud Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.9,<22",
    "cursor-sdk>=0.1.7",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.6.0",
    "openai>=1.58.0",
    "telegramify-markdown>=1.1.0",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
tg-cursor-bot = "tg_cursor_bot.__main__:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
